--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wone Project v.1</title>
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
     <!-- Boostrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -25,79 +28,55 @@
 
 
     <!-- DEL PROGRAMA -->
-    <script src="./config/utils.js"></script>
     <script defer src="./config/firebase.js" type="module"></script>
-    <script defer src="./config/componentes.js"></script>
+    <script src="./config/signIn.js"></script>
+    <script src="./config/utils.js"></script>
 
 
-
+    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a id="mnCargarProyectos" class="nav-link" href="#">Cargar Proyectos</a>
-              </li>
-              <li class="nav-item">
-                <a id="mnCrearProyectos" class="nav-link" href="#">Crear Proyectos</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-                <select id="cSelProyecto" class="form-select" aria-label="Default select example"
-                onchange="abrirProyecto(this)">
-                </select>
-            </form>
-          </div>
-        </div>
-      </nav>
+
 </header>
 
-<body>
-    <div id="contenedor-proyecto">
 
-    </div>
-    <!-- Modal -->
-    <!-- Button trigger modal -->
-    <div class="modal fade" id="modalConfirmacion">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5">Confirmacion</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="modal-confirmar-body"></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Crear</button>
-                    <button type="button" id="btn-modal-confirmar" class="btn btn-primary">Ver proyectos</button>
-                </div>
-            </div>
+
+<body class="d-flex justify-content-center align-items-center vh-100 bg-org">
+    <div class="bg-white p-5 rounded-5">
+        <div class="d-flex justify-content-center">
+            <i class="bi bi-person-circle h1"></i>
+        </div>
+        <div class="d-flex justify-content-center m-2 fw-medium text-org">INGRESO A LA APLICACIÓN</div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">
+                <i class="bi bi-people-fill h5"></i>
+            </span>
+            <input type="text" class="form-control" placeholder="nombre@email.com" aria-label="Correo eléctrónico"
+                aria-describedby="basic-addon1">
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">
+                <i class="bi bi-key h4"></i>
+            </span>
+            <input type="password" class="form-control" placeholder="******" aria-label="Contraseña"
+                aria-describedby="basic-addon1">
+        </div>
+        <div class="d-flex justify-content-center mt-4 m-2">
+            <button type="button" class="btn btn-secondary" onclick="mensajes()">Ingresar</button>
         </div>
     </div>
+
+
+
 
 </body>
-<div class="modal fade" id="modalConfirmacion">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5">Confirmacion</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <p id="modal-confirmar-body"></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" id="btn-modal-confirmar" class="btn btn-primary">Confirmar</button>
-            </div>
-        </div>
-    </div>
-</div>
+
+
+
+
+
+
+
+
 </html>
