--- a/index.html
+++ b/index.html
@@ -4,43 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wone Project v.1</title>
+    <title>Proyecto Wone</title>
 
+    <!--Toasty-->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-    <!-- Boostrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    <!--Bootstrapp-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-
-    <!-- DEL PROGRAMA -->
-    <script defer src="./config/firebase.js" type="module"></script>
-    <script src="./config/signIn.js"></script>
-    <script src="./config/utils.js"></script>
-
-
+    <!--Cargamos nuestra hoja de estilos personalziados-->
     <link rel="stylesheet" href="./styles.css">
+
+    <!--Configuración de DB-->
+    <script defer src="./js/dataconfig.js" type="module"></script>
+    <script src="./js/utils.js"></script>
+    <!--Configuraciónes de inicio de sesión-->
+    <script src="./js/credentials.js"></script>
 </head>
-
-<header>
-
-</header>
-
-
 
 <body class="d-flex justify-content-center align-items-center vh-100 bg-org">
     <div class="bg-white p-5 rounded-5">
@@ -52,31 +39,23 @@
             <span class="input-group-text" id="basic-addon1">
                 <i class="bi bi-people-fill h5"></i>
             </span>
-            <input type="text" class="form-control" placeholder="nombre@email.com" aria-label="Correo eléctrónico"
-                aria-describedby="basic-addon1">
+            <!--Guarda información texto del correo de ingreso afecta el archivo (credential.js)-->
+            <input id="inEmail" type="text" class="form-control" placeholder="nombre@email.com"
+                aria-label="Correo eléctrónico" aria-describedby="basic-addon1">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">
                 <i class="bi bi-key h4"></i>
             </span>
-            <input type="password" class="form-control" placeholder="******" aria-label="Contraseña"
+            <!--Guarda información contraseña de ingreso afecta el archivo (credential.js)-->
+            <input id="inPass" type="password" class="form-control" placeholder="******" aria-label="Contraseña"
                 aria-describedby="basic-addon1">
         </div>
         <div class="d-flex justify-content-center mt-4 m-2">
-            <button type="button" class="btn btn-secondary" onclick="mensajes()">Ingresar</button>
+            <!--Evoca la función inicio de sesión en el archivo (credentials.js)-->
+            <button type="button" class="btn btn-secondary" onclick="IniCredential()">Ingresar</button>
         </div>
     </div>
-
-
-
-
 </body>
-
-
-
-
-
-
-
 
 </html>
